tests/data/hsts/standard/hsts-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/hsts: "True"
  name: hsts-ingress
spec:
  rules:
  - host: hsts.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
